--- a/index.html
+++ b/index.html
@@ -78,9 +78,20 @@
     Gallery
 </h3>
 
+<a href="https://github.com/effects67/effects67.github.io">bioSite</a>
+<p> My first GitHub repository</p> <br/>
 <a href="https://effects67.github.io/bioSite/">bioSite</a>
+<p> My first website</p> <br/>
 <a href="https://github.com/effects67/web-230">web-230</a>
+<p> My first JavaScript class</p> <br/>
 <a href="https://github.com/effects67/web-330">web-330</a>
+<p> Intermediate JS class</p> <br/>
+<a href="https://effects67.github.io/profile/">web-330</a>
+<p> Profile GitHub repository</p> <br/>
+
+<div class="float-right">
+    <img src="sig.png" alt="My signature">
+</div>
 
 
 
