--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
     </title>
   </head>
   <body>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
-                    </li><br />
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Link here</a>
-                    </li><br />
-                    <li class="nav-item">
-                    <a class="nav-link" href="vance-diagram.html">Diagrams</a>
-                </li>
-                </ul>
-            </nav>
+        <div class="container">
+                <div class="page-header">
+                    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Home</a>
+                            </li><br />
+                            <li class="nav-item">
+                            <a class="nav-link" href="Vance-rest.html">REST</a>
+                            </li><br />
+                            <li class="nav-item">
+                            <a class="nav-link" href="vance-diagram.html">Diagrams</a>
+                        </li>
+                        </ul>
+                    </nav>
         <div class="container">
                 <div class="page-header">
 
