--- a/vance-diagram.html
+++ b/vance-diagram.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                             </li><br />
                             <li class="nav-item">
-                            <a class="nav-link" href="#">Link here</a>
+                            <a class="nav-link" href="Vance-rest.html">REST</a>
                             </li><br />
                             <li class="nav-item">
                             <a class="nav-link" href="vance-diagram.html">Diagrams</a>
