adding additional assignments, etc.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                             </li><br />
                             <li class="nav-item">
                             <a class="nav-link" href="vance-diagram.html">Diagrams</a>
-                        </li>
+                            </li> <br />
+                            <li class="nav-item">
+                            <a class="nav-link" href="vance-soap-apis.html">SOAP</a>
+                            </li>
                         </ul>
                     </nav>
         <div class="container">
