--- a/vance-diagram.html
+++ b/vance-diagram.html
@@ -36,7 +36,10 @@
                             </li><br />
                             <li class="nav-item">
                             <a class="nav-link" href="vance-diagram.html">Diagrams</a>
-                        </li>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="vance-soap-apis.html">SOAP</a>
+                            </li>
                         </ul>
                     </nav>
     <br />
@@ -54,8 +57,6 @@
                 <h1>Gallery</h1>
             <div class="container">
                 <h1>Week 1</h1>
-            
-            <h1>Gallery</h1>
             <figure>
                     <img src="nosql-data-diagrams/week-1/data models.png" alt="data models">
                     <figcaption>UMLet Data Diagram</figcaption>
@@ -66,7 +67,7 @@
                     <figcaption>NoSQL Data Structure</figcaption>
             </figure>
             </div>
-
+            <hr><br>
             <div class="container">
                 <h1>Week 2</h1>
                 <div class="row">
