--- a/vance-diagram.html
+++ b/vance-diagram.html
@@ -73,25 +73,25 @@
                 <div class="row">
                     <div class="col-sm">
                     <figure>
-                        <img src="nosql-data-diagrams/week-2/Vance-2.2 SQL.png" alt="data models">
+                        <img src="nosql-data-diagrams/week-2/Vance-2.2 SQL.PNG" alt="data models">
                         <figcaption>NodeShopper NoSQL Data Structure</figcaption>
                     </figure>
                     </div>
                     <div class="col-sm">
                     <figure>
-                        <img src="nosql-data-diagrams/week-2/Vance-2.2.png" alt="data structure">
+                        <img src="nosql-data-diagrams/week-2/Vance-2.2.PNG" alt="data structure">
                         <figcaption>NodeShopper UMLet Data Diagram</figcaption>
                     </figure>
                     </div>
                     <div class="col-sm">
                     <figure>
-                        <img src="nosql-data-diagrams/week-2/Vance-2.3 SQL.png" alt="data models">
+                        <img src="nosql-data-diagrams/week-2/Vance-2.3 SQL.PNG" alt="data models">
                         <figcaption>NodeTech NoSQL Data Structure</figcaption>
                     </figure>
                     </div>
                     <div class="col-sm">
                     <figure>
-                        <img src="nosql-data-diagrams/week-2/Vance-2.3.png" alt="data structure">
+                        <img src="nosql-data-diagrams/week-2/Vance-2.3.PNG" alt="data structure">
                         <figcaption>NodeTech UMLet Data Diagram</figcaption>
                     </figure>
                     </div>
