--- a/vance-diagram.html
+++ b/vance-diagram.html
@@ -112,13 +112,13 @@
                     </div>
                     <div class="col-sm">
                     <figure>
-                        <img src="nosql-data-diagrams/week-3/3.2 ORD.png" alt="UMLET diagram">
+                        <img src="nosql-data-diagrams/week-3/3.2 ORD.PNG" alt="UMLET diagram">
                         <figcaption>NodeSecurity ORD</figcaption>
                     </figure>
                     </div>
                     <div class="col-sm">
                     <figure>
-                        <img src="nosql-data-diagrams/week-3/3.3.png" alt="ORD and NoSQL documentized">
+                        <img src="nosql-data-diagrams/week-3/3.3.PNG" alt="ORD and NoSQL documentized">
                         <figcaption>NodeBookCo NoSQL and ORD diagrams</figcaption>
                     </figure>
                     </div>
