--- a/Vance-rest.html
+++ b/Vance-rest.html
@@ -24,24 +24,27 @@
   </head>
   <body>
 
-        <div class="container">
-                <div class="page-header">
-                    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home</a>
-                            </li><br />
-                            <li class="nav-item">
-                            <a class="nav-link" href="Vance-rest.html">REST</a>
-                            </li><br />
-                            <li class="nav-item">
-                            <a class="nav-link" href="vance-diagram.html">Diagrams</a>
-                            </li> <br>
-                            <li class="nav-item">
-                            <a class="nav-link" href="vance-soap-apis.html">SOAP</a>
-                            </li>
-                        </ul>
-                    </nav>
+    <div class="container">
+        <div class="page-header">
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home</a>
+                    </li><br />
+                    <li class="nav-item">
+                    <a class="nav-link" href="Vance-rest.html">REST</a>
+                    </li><br />
+                    <li class="nav-item">
+                    <a class="nav-link" href="vance-diagram.html">Diagrams</a>
+                    </li> <br>
+                    <li class="nav-item"> 
+                    <a class="nav-link" href="vance-soap-apis.html">SOAP</a>
+                    </li> <br>
+                    <li class="nav-item"> 
+                    <a class="nav-link" href="vance-json-apis.html">JSON</a>
+                    </li> <br>
+                </ul>
+            </nav>
     <br />
 
                     <h1> Gabriel Vance</h1>
