adding heroku links

--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
                 </div>
       
 
-
+<div class="container">
+    <a href="https://vance-api-gateway.herokuapp.com/">
+    <img src="images/herokuapp.PNG" alt="repository" class:"d-block img-fluid" style="max-height:200px"></a>
+    <br>
+    <caption>A Heroku App that utilizes 4 resources (login/logout/auth/register).</caption> 
+</div>
+<br><br><br>
   
     <div class="container" style="max-width:800px" id="carousel">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
