--- a/vance-soap-apis.html
+++ b/vance-soap-apis.html
@@ -43,6 +43,9 @@
                     <li class="nav-item"> 
                     <a class="nav-link" href="vance-json-apis.html">JSON</a>
                     </li> <br>
+                    <li class="nav-item"> 
+                    <a class="nav-link" href="vance-devops.html">DevOps</a>
+                    </li> <br>
                 </ul>
             </nav>
     <br />
