--- a/vance-diagram.html
+++ b/vance-diagram.html
@@ -43,6 +43,9 @@
                     <li class="nav-item"> 
                     <a class="nav-link" href="vance-json-apis.html">JSON</a>
                     </li> <br>
+                    <li class="nav-item"> 
+                    <a class="nav-link" href="vance-devops.html">DevOps</a>
+                    </li> <br>
                 </ul>
             </nav>
     <br />
@@ -109,7 +112,7 @@
                 <div class="row">
                     <div class="col-sm">
                     <figure>
-                        <img src="nosql-data-diagrams/week-3/3.2.PNG" alt="NoSQL data structure">
+                        <img src="nosql-data-diagrams/week-3/3.2.png" alt="NoSQL data structure">
                         <figcaption>NodeSecurity with Roles and Permissions</figcaption>
                     </figure>
                     </div>
