--- a/vance-devops.html
+++ b/vance-devops.html
@@ -76,7 +76,7 @@
         <div class="container">
             <h3>Week 3</h3>
                     <video width="400" controls>
-                    <source src="devops/testing.mp4"></video>
+                    <source src="devops/Testing.mp4"></video>
                    
         </div><hr>
 
