--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 
                     <p>
                         
-                        Apart from coding, I'm an avid reader, pianist, and amateur conosiour of cuisine. Without the internet, I wouldn't have access to
+                        Apart from coding, I'm an avid reader, pianist, and amateur connoisseur of cuisine. Without the internet, I wouldn't have access to
                         recipes, e-books, or sheet music.
                         I love the vast available resources on the web, which drives my motivation for learning.
                         I hope to contribute to the presentation and distribution of information, services and products for a better online experience.</div>
