--- a/vance-devops.html
+++ b/vance-devops.html
@@ -104,7 +104,7 @@
             <div class="container">
                     <h3>Week 7</h3>
                             <video width="400" controls>
-                            <source src="tech/.mp4"></video>
+                            <source src="Tech/.mp4"></video>
                            
                 </div><hr>
 
