--- a/vance-devops.html
+++ b/vance-devops.html
@@ -104,14 +104,14 @@
             <div class="container">
                     <h3>Week 7</h3>
                             <video width="400" controls>
-                            <source src="Tech/.mp4"></video>
+                            <source src="devops/Tech.mp4"></video>
                            
                 </div><hr>
 
                 <div class="container">
                         <h3>Week 8</h3>
                                 <video width="400" controls>
-                                <source src="#/.mp4"></video>
+                                <source src="devops/open.mp4"></video>
                                
                     </div><hr>
 
