--- a/vance-devops.html
+++ b/vance-devops.html
@@ -115,6 +115,13 @@
                                
                     </div><hr>
 
+                    <div class="container">
+                        <h3>Week 9</h3>
+                                <video width="400" controls>
+                                <source src="devops/change.mp4"></video>
+                               
+                    </div>
+
         <div style="clear:both">
         <footer class="page-footer">
             <div class="container">
