--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     <li class="nav-item"> 
                     <a class="nav-link" href="vance-devops.html">DevOps</a>
                     </li> <br>
+                    <li class="nav-item"> 
+                    <a class="nav-link" href="https://bobs-repair.herokuapp.com/#/">MEAN Capstone</a>
+                    </li> <br>
                 </ul>
             </nav>
     <br />
